<resources>
    <string name="app_name">Savg</string>

    // Home page
    <string name="home_title">Home</string>

    <string name="like_button">Go to likes</string>
    <string name="wishlist_button">Go to wishlist</string>
    <string name="close_button">Close button</string>

    <string name="likes_title">Likes</string>
    <string name="wishlist_title">My wishlist</string>

    <string name="fragment_container">Contain main components</string>

    <string name="best_sellers">
        <u>The best sellers</u>
    </string>
    <string name="search_games">Search Games…</string>

    <string name="empty_wishes">
        You have no likes yet. You can add games to your likes by clicking on the heart icon on the game page.
    </string>

    <string name="empty_likes">
        You have no likes yet. You can add games to your likes by clicking on the heart icon on the game page.
    </string>

    // Login page
    <string name="login_title">Welcome !</string>
    <string name="login_text">Please login or create an account to use the app.</string>

    <string name="login_button">Login</string>
    <string name="login_register_button">Create a new account</string>

    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed! Please try again later</string>

    <string name="forgot_password">
        <u>Forgot password</u>
    </string>

    // Register page
    <string name="register_title">Registration</string>
    <string name="register_text">Please enter this information, so that your lists are saved.</string>

    <string name="register_button">Register</string>

    <string name="register_successful">Registration successful!</string>
    <string name="register_failed">Registration failed! Please try again later</string>

    // Forgot password page
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_text">Please enter your email to reset your password</string>

    <string name="forgot_password_button">Resend my password</string>

    <string name="forgot_password_successful">An email has been sent to you to reset your password</string>
    <string name="forgot_password_failed">An error occurred while trying to reset your password. Please try again
        later
    </string>

    <string name="forgot_password_error_user_not_found">This email is not associated with any account.</string>

    // Auth related
    <string name="auth_field_username">Username</string>
    <string name="auth_field_email">E-mail</string>
    <string name="auth_field_password">Password</string>
    <string name="auth_field_password_confirm">Password verification</string>

    <string name="auth_no_username">Please enter a username!</string>
    <string name="auth_no_email">Please enter an email!</string>
    <string name="auth_no_password">Please enter a password!</string>

    <string name="auth_bad_email">Please enter a valid email address!</string>
    <string name="auth_bad_password">The password must contain at least 6 characters</string>

    <string name="auth_passwords_not_matching">Passwords do not match</string>

    // Auth errors

    <string name="auth_error_email_already_in_use">This email is already in use</string>
    <string name="auth_error_user_not_found">Please check your email or create a new account</string>
    <string name="auth_error_user_disabled">This user has been disabled</string>
    <string name="auth_error_wrong_password">Wrong password</string>
    <string name="auth_error_too_many_requests">Too many requests. Please try again later</string>
    <string name="auth_error_unknown">An error occurred</string>

    // Game card
    <string name="gameCover">Game cover</string>
    <string name="knowMore">Know more</string>
    <string name="gamePrice">
        <u>price : %s</u>
    </string>

    // Game Details

    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="games_details_title">
        Game details
    </string>

    <string name="game_details_add_to_wishlist">Add to wishlist</string>
    <string name="game_details_remove_from_wishlist">Remove from wishlist</string>

    <string name="game_details_add_to_likes">Add to likes</string>
    <string name="game_details_remove_from_likes">Remove from likes</string>
</resources>