<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:padding="25dp"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="@font/google_sans"
            android:textStyle="bold"
            android:text="@string/login_title"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:paddingHorizontal="70dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/login_text"
        />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_field_email"
        android:minHeight="50dp"
        android:textSize="15sp"
        android:fontFamily="@font/proxima_nova"
        android:background="@drawable/auth_field_bg"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:autofillHints="emailAddress"
        android:paddingHorizontal="13dp"
        android:inputType="textEmailAddress"
    />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_field_password"
        android:minHeight="50dp"
        android:textSize="15sp"
        android:fontFamily="@font/proxima_nova"
        android:background="@drawable/auth_field_bg"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:paddingHorizontal="13dp"
        android:layout_marginTop="13dp"
    />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:visibility="invisible"
    />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:textColor="@color/white"
        android:text="@string/login_button"
        android:fontFamily="@font/proxima_nova"
        android:height="57dp"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:layout_marginTop="26dp"
        app:cornerRadius="4dp"
    />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:fontFamily="@font/proxima_nova"
        android:textAllCaps="false"
        android:height="57dp"
        android:text="@string/login_register_button"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/white"
        app:cornerRadius="4dp"
        app:strokeColor="@color/accent"
        app:strokeWidth="1dp"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textSize="15sp"
            android:fontFamily="@font/proxima_nova"
            android:textColor="@color/gray2"
            android:clickable="true"
            android:focusable="true"
        />
    </RelativeLayout>
</LinearLayout>