<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".LoginActivity"
    android:background="@color/primary"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/login_title"
    />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_field_email"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
    />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_field_password"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:autofillHints="password"
        android:inputType="textPassword"
    />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/primary"
        android:text="@string/auth_login_button"
        android:layout_marginTop="20dp"
    />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
    />
</LinearLayout>