<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/primary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:background="@color/primary" android:id="@+id/toolbar4">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/google_sans"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp">
                <ImageView
                        android:id="@+id/likesButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/like"
                        android:contentDescription="@string/like_button"
                        android:layout_marginEnd="30dp"/>
                <ImageView
                        android:id="@+id/wishlistButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wishlist"
                        android:contentDescription="@string/wishlist_button"/>
            </LinearLayout>
        </Toolbar>
        <ScrollView
            android:contentDescription="@string/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/home_fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.example.androidproject.HomeFragment"
                    tools:layout="@layout/fragment_home" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
