<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@drawable/bg"
        android:padding="25dp"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="30sp"
                android:fontFamily="@font/google_sans"
                android:textStyle="bold"
                android:text="@string/forgot_password_title"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova"
                android:text="@string/forgot_password_text"
        />
    </LinearLayout>

    <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_field_email"
            android:minHeight="50dp"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/proxima_nova"
            android:background="@drawable/auth_field_bg"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
    />

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
    />

    <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:textColor="@color/white"
            android:text="@string/forgot_password_button"
            android:fontFamily="@font/proxima_nova"
            android:height="57dp"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_marginTop="90dp"
            app:cornerRadius="4dp"
    />
</LinearLayout>